Fix box chat too big

--- a/ChatBot/static/style.css
+++ b/ChatBot/static/style.css
@@ -16,8 +16,8 @@ body,html{
 	margin-right: 5px;
 }
 .card{
-	height: 95vh;
-	width: 95vw;
+	height: 80vh;
+	width: 76vw;
 	border-radius: 15px !important;
 	background-color: rgba(0,0,0,0.4) !important;
 }
@@ -149,6 +149,7 @@ border-radius: 0 0 15px 15px !important;
 	margin-right: 20px;
 }
 .msg_cotainer{
+	max-width: 60%;
 	margin-top: auto;
 	margin-bottom: auto;
 	margin-left: 10px;
